--- a/hyperledger-BCShield/network/configtx.yaml
+++ b/hyperledger-BCShield/network/configtx.yaml
@@ -25,6 +25,12 @@ Organizations:
             # encoded in the genesis block in the Application section context
             - Host: peer0.hprovider.healthcare.com
               Port: 7051
+            - Host: peer2.hprovider.healthcare.com
+              Port: 7051
+            - Host: peer3.hprovider.healthcare.com
+              Port: 7051
+            - Host: peer4.hprovider.healthcare.com
+              Port: 7051
 
     - &Research        
         Name: ResearchMSP
@@ -37,6 +43,14 @@ Organizations:
             # encoded in the genesis block in the Application section context
             - Host: peer0.research.healthcare.com
               Port: 7051
+            - Host: peer1.research.healthcare.com
+              Port: 7051
+            - Host: peer2.research.healthcare.com
+              Port: 7051
+            - Host: peer3.research.healthcare.com
+              Port: 7051
+    
+
     
 ################################################################################
 #
