--- a/hyperledger-BCShield/network/docker-compose.yaml
+++ b/hyperledger-BCShield/network/docker-compose.yaml
@@ -2,16 +2,16 @@
 
 version: "2"
 
-volumes:
-  ordererhp.healthcare.com:
-  peer0.hprovider.healthcare.com:
-  peer1.hprovider.healthcare.com:
-  peer2.hprovider.healthcare.com:
-  peer3.hprovider.healthcare.com:
-  peer0.research.healthcare.com:
-  peer1.research.healthcare.com:
-  peer2.research.healthcare.com:
-  peer3.research.healthcare.com:
+#volumes:
+#  ordererhp.healthcare.com:
+#  peer0.hprovider.healthcare.com:
+#  peer1.hprovider.healthcare.com:
+#  peer2.hprovider.healthcare.com:
+#  peer3.hprovider.healthcare.com:
+#  peer0.research.healthcare.com:
+#  peer1.research.healthcare.com:
+#  peer2.research.healthcare.com:
+#  peer3.research.healthcare.com:
 
 networks:
   healthNetwork:
