--- a/hyperledger-BCShield/network/docker-compose.yaml
+++ b/hyperledger-BCShield/network/docker-compose.yaml
@@ -101,7 +101,7 @@ services:
       - CORE_PEER_GOSSIP_EXTERNALENDPOINT=peer0.hprovider.healthcare.com:7051
       - CORE_PEER_LOCALMSPID=HProviderMSP
       - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
-      - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb.peer0.hprovider:10010
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb.peer0.hprovider:7984
     volumes:
       - /var/run/:/host/var/run/
       - ./crypto-config/peerOrganizations/hprovider.healthcare.com/peers/peer0.hprovider.healthcare.com/msp:/etc/hyperledger/fabric/msp
@@ -117,11 +117,18 @@ services:
 
   couchdb.peer0.hprovider:
     container_name: couchdb.peer0.hprovider
-    image: hyperledger/fabric-couchdb:latest
-    ports:
-      - 10010:10010
+    image: hyperledger/fabric-couchdb:0.4.10
     environment:
-      DB_URL: http://localhost:10010/member_db
+      - DB_URL: http://localhost:7984/member_db
+      - COUCHDB_USER=peer0Hprovider
+      - COUCHDB_PASSWORD=nothingcomplex@123
+    volumes:
+      - ./couchdbData/couchdb.peer0.hprovider/:/opt/couchdb/data
+    ports:
+      - "7984:5984"
+    networks:
+      - healthNetwork
+      
 
   peer1.hprovider.healthcare.com:
     container_name: peer1.hprovider.healthcare.com
@@ -135,7 +142,7 @@ services:
       - CORE_PEER_GOSSIP_BOOTSTRAP=peer1.hprovider.healthcare.com:7051
       - CORE_PEER_LOCALMSPID=HProviderMSP
       - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
-      - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb.peer1.hprovider:10020
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb.peer1.hprovider:8984
     volumes:
       - /var/run/:/host/var/run/
       - ./crypto-config/peerOrganizations/hprovider.healthcare.com/peers/peer1.hprovider.healthcare.com/msp:/etc/hyperledger/fabric/msp
@@ -151,12 +158,19 @@ services:
 
   couchdb.peer1.hprovider:
     container_name: couchdb.peer1.hprovider
-    image: hyperledger/fabric-couchdb:latest
-    ports:
-      - 10020:10020
+    image: hyperledger/fabric-couchdb:0.4.10
     environment:
-      DB_URL: http://localhost:10020/member_db
-
+      - DB_URL: http://localhost:8984/member_db
+      - COUCHDB_USER=peer1Hprovider
+      - COUCHDB_PASSWORD=nothingcomplex@123
+    volumes:
+      - ./couchdbData/couchdb.peer1.hprovider/:/opt/couchdb/data
+    ports:
+      - "8984:5984"
+    networks:
+      - healthNetwork
+  
+  
   peer2.hprovider.healthcare.com:
     container_name: peer2.hprovider.healthcare.com
     extends:
@@ -169,7 +183,7 @@ services:
       - CORE_PEER_GOSSIP_BOOTSTRAP=peer2.hprovider.healthcare.com:7051
       - CORE_PEER_LOCALMSPID=HProviderMSP
       - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
-      - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb.peer2.hprovider:10030
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb.peer2.hprovider:8985
     volumes:
       - /var/run/:/host/var/run/
       - ./crypto-config/peerOrganizations/hprovider.healthcare.com/peers/peer2.hprovider.healthcare.com/msp:/etc/hyperledger/fabric/msp
@@ -185,11 +199,17 @@ services:
 
   couchdb.peer2.hprovider:
     container_name: couchdb.peer2.hprovider
-    image: hyperledger/fabric-couchdb:latest
-    ports:
-      - 10030:10030
+    image: hyperledger/fabric-couchdb:0.4.10
     environment:
-      DB_URL: http://localhost:10030/member_db
+      - DB_URL: http://localhost:8985/member_db
+      - COUCHDB_USER=peer2Hprovider
+      - COUCHDB_PASSWORD=nothingcomplex@123
+    volumes:
+      - ./couchdbData/couchdb.peer1.hprovider/:/opt/couchdb/data
+    ports:
+      - "8985:5984"
+    networks:
+      - healthNetwork
 
   peer3.hprovider.healthcare.com:
     container_name: peer3.hprovider.healthcare.com
@@ -203,7 +223,7 @@ services:
       - CORE_PEER_GOSSIP_BOOTSTRAP=peer3.hprovider.healthcare.com:7051
       - CORE_PEER_LOCALMSPID=HProviderMSP
       - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
-      - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb.peer3.hprovider:10040
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb.peer3.hprovider:8986
     volumes:
       - /var/run/:/host/var/run/
       - ./crypto-config/peerOrganizations/hprovider.healthcare.com/peers/peer3.hprovider.healthcare.com/msp:/etc/hyperledger/fabric/msp
@@ -219,11 +239,17 @@ services:
 
   couchdb.peer3.hprovider:
     container_name: couchdb.peer3.hprovider
-    image: hyperledger/fabric-couchdb:latest
-    ports:
-      - 10040:10040
+    image: hyperledger/fabric-couchdb:0.4.10
     environment:
-      DB_URL: http://localhost:10040/member_db
+      - DB_URL: http://localhost:8986/member_db
+      - COUCHDB_USER=peer3Hprovider
+      - COUCHDB_PASSWORD=nothingcomplex@123
+    volumes:
+      - ./couchdbData/couchdb.peer1.hprovider/:/opt/couchdb/data
+    ports:
+      - "8986:5984"
+    networks:
+      - healthNetwork
 
   peer0.research.healthcare.com:
     container_name: peer0.research.healthcare.com
@@ -237,7 +263,7 @@ services:
       - CORE_PEER_GOSSIP_BOOTSTRAP=peer1.research.healthcare.com:7051
       - CORE_PEER_LOCALMSPID=ResearchMSP
       - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
-      - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb.peer0.research:10050
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb.peer0.research:8059
     volumes:
       - /var/run/:/host/var/run/
       - ./crypto-config/peerOrganizations/research.healthcare.com/peers/peer0.research.healthcare.com/msp:/etc/hyperledger/fabric/msp
@@ -252,12 +278,18 @@ services:
       - healthNetwork
 
   couchdb.peer0.research:
-    container_name: couchdb.peer0.research
-    image: hyperledger/fabric-couchdb:latest
-    ports:
-      - 10050:10050
+    container_name: couchdb.peer1.research
+    image: hyperledger/fabric-couchdb:0.4.10
     environment:
-      DB_URL: http://localhost:10050/member_db
+      - DB_URL: http://localhost:8059/member_db
+      - COUCHDB_USER=peer0Research
+      - COUCHDB_PASSWORD=nothingcomplex@123
+    volumes:
+      - ./couchdbData/couchdb.peer1.hprovider/:/opt/couchdb/data
+    ports:
+      - "8059:5984"
+    networks:
+      - healthNetwork
 
   peer1.research.healthcare.com:
     container_name: peer1.research.healthcare.com
@@ -271,7 +303,7 @@ services:
       - CORE_PEER_GOSSIP_BOOTSTRAP=peer1.research.healthcare.com:7051
       - CORE_PEER_LOCALMSPID=ResearchMSP
       - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
-      - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb.peer1.research:10060
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb.peer1.research:8069
     volumes:
       - /var/run/:/host/var/run/
       - ./crypto-config/peerOrganizations/research.healthcare.com/peers/peer1.research.healthcare.com/msp:/etc/hyperledger/fabric/msp
@@ -287,11 +319,17 @@ services:
 
   couchdb.peer1.research:
     container_name: couchdb.peer1.research
-    image: hyperledger/fabric-couchdb:latest
-    ports:
-      - 10060:10060
+    image: hyperledger/fabric-couchdb:0.4.10
     environment:
-      DB_URL: http://localhost:10060/member_db
+      - DB_URL: http://localhost:8069/member_db
+      - COUCHDB_USER=peer1Research
+      - COUCHDB_PASSWORD=nothingcomplex@123
+    volumes:
+      - ./couchdbData/couchdb.peer1.hprovider/:/opt/couchdb/data
+    ports:
+      - "8069:5984"
+    networks:
+      - healthNetwork
 
   peer2.research.healthcare.com:
     container_name: peer2.research.healthcare.com
@@ -305,7 +343,7 @@ services:
       - CORE_PEER_GOSSIP_BOOTSTRAP=peer2.research.healthcare.com:7051
       - CORE_PEER_LOCALMSPID=ResearchMSP
       - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
-      - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb.peer2.research:10070
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb.peer2.research:8079
     volumes:
       - /var/run/:/host/var/run/
       - ./crypto-config/peerOrganizations/research.healthcare.com/peers/peer2.research.healthcare.com/msp:/etc/hyperledger/fabric/msp
@@ -321,11 +359,17 @@ services:
 
   couchdb.peer2.research:
     container_name: couchdb.peer2.research
-    image: hyperledger/fabric-couchdb:latest
-    ports:
-      - 10070:10070
+    image: hyperledger/fabric-couchdb:0.4.10
     environment:
-      DB_URL: http://localhost:10070/member_db
+      - DB_URL: http://localhost:8079/member_db
+      - COUCHDB_USER=peer2Research
+      - COUCHDB_PASSWORD=nothingcomplex@123
+    volumes:
+      - ./couchdbData/couchdb.peer2.hprovider/:/opt/couchdb/data
+    ports:
+      - "8079:5984"
+    networks:
+      - healthNetwork
 
   peer3.research.healthcare.com:
     container_name: peer3.research.healthcare.com
@@ -339,7 +383,7 @@ services:
       - CORE_PEER_GOSSIP_BOOTSTRAP=peer3.research.healthcare.com:7051
       - CORE_PEER_LOCALMSPID=ResearchMSP
       - CORE_LEDGER_STATE_STATEDATABASE=CouchDB
-      - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb.peer3.research:10080
+      - CORE_LEDGER_STATE_COUCHDBCONFIG_COUCHDBADDRESS=couchdb.peer3.research:8179
     volumes:
       - /var/run/:/host/var/run/
       - ./crypto-config/peerOrganizations/research.healthcare.com/peers/peer3.research.healthcare.com/msp:/etc/hyperledger/fabric/msp
@@ -355,11 +399,17 @@ services:
 
   couchdb.peer3.research:
     container_name: couchdb.peer3.research
-    image: hyperledger/fabric-couchdb:latest
-    ports:
-      - 10080:10080
+    image: hyperledger/fabric-couchdb:0.4.10
     environment:
-      DB_URL: http://localhost:10080/member_db
+      - DB_URL: http://localhost:8179/member_db
+      - COUCHDB_USER=peer3Research
+      - COUCHDB_PASSWORD=nothingcomplex@123
+    volumes:
+      - ./couchdbData/couchdb.peer3.hprovider/:/opt/couchdb/data
+    ports:
+      - "8179:5984"
+    networks:
+      - healthNetwork
 
   cli:
     container_name: cli
