login and senha couchdb

--- a/hyperledger-BCShield/network/docker-compose.yaml
+++ b/hyperledger-BCShield/network/docker-compose.yaml
@@ -120,8 +120,8 @@ services:
     image: hyperledger/fabric-couchdb:0.4.10
     environment:
       - DB_URL: http://localhost:7984/member_db
-      - COUCHDB_USER=peer0Hprovider
-      - COUCHDB_PASSWORD=nothingcomplex@123
+      - COUCHDB_USER=admin
+      - COUCHDB_PASSWORD=adminpw
     volumes:
       - ./couchdbData/couchdb.peer0.hprovider/:/opt/couchdb/data
     ports:
@@ -162,7 +162,7 @@ services:
     environment:
       - DB_URL: http://localhost:8984/member_db
       - COUCHDB_USER=peer1Hprovider
-      - COUCHDB_PASSWORD=nothingcomplex@123
+      - COUCHDB_PASSWORD=adminpw
     volumes:
       - ./couchdbData/couchdb.peer1.hprovider/:/opt/couchdb/data
     ports:
@@ -203,7 +203,7 @@ services:
     environment:
       - DB_URL: http://localhost:8985/member_db
       - COUCHDB_USER=peer2Hprovider
-      - COUCHDB_PASSWORD=nothingcomplex@123
+      - COUCHDB_PASSWORD=adminpw
     volumes:
       - ./couchdbData/couchdb.peer1.hprovider/:/opt/couchdb/data
     ports:
@@ -243,7 +243,7 @@ services:
     environment:
       - DB_URL: http://localhost:8986/member_db
       - COUCHDB_USER=peer3Hprovider
-      - COUCHDB_PASSWORD=nothingcomplex@123
+      - COUCHDB_PASSWORD=adminpw
     volumes:
       - ./couchdbData/couchdb.peer1.hprovider/:/opt/couchdb/data
     ports:
@@ -283,7 +283,7 @@ services:
     environment:
       - DB_URL: http://localhost:8059/member_db
       - COUCHDB_USER=peer0Research
-      - COUCHDB_PASSWORD=nothingcomplex@123
+      - COUCHDB_PASSWORD=adminpw
     volumes:
       - ./couchdbData/couchdb.peer1.hprovider/:/opt/couchdb/data
     ports:
@@ -323,7 +323,7 @@ services:
     environment:
       - DB_URL: http://localhost:8069/member_db
       - COUCHDB_USER=peer1Research
-      - COUCHDB_PASSWORD=nothingcomplex@123
+      - COUCHDB_PASSWORD=adminpw
     volumes:
       - ./couchdbData/couchdb.peer1.hprovider/:/opt/couchdb/data
     ports:
@@ -363,7 +363,7 @@ services:
     environment:
       - DB_URL: http://localhost:8079/member_db
       - COUCHDB_USER=peer2Research
-      - COUCHDB_PASSWORD=nothingcomplex@123
+      - COUCHDB_PASSWORD=adminpw
     volumes:
       - ./couchdbData/couchdb.peer2.hprovider/:/opt/couchdb/data
     ports:
@@ -403,7 +403,7 @@ services:
     environment:
       - DB_URL: http://localhost:8179/member_db
       - COUCHDB_USER=peer3Research
-      - COUCHDB_PASSWORD=nothingcomplex@123
+      - COUCHDB_PASSWORD=adminpw
     volumes:
       - ./couchdbData/couchdb.peer3.hprovider/:/opt/couchdb/data
     ports:
